RESOLVED FIXED174307
[WK2] Action sheets for links fail to present in WebKit2 PDF view
https://bugs.webkit.org/show_bug.cgi?id=174307
Summary [WK2] Action sheets for links fail to present in WebKit2 PDF view
Wenson Hsieh
Reported 2017-07-09 23:47:01 PDT
Attachments
Patch (5.05 KB, patch)
2017-07-09 23:54 PDT, Wenson Hsieh
thorton: review+
Patch for landing (5.01 KB, patch)
2017-07-10 00:26 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2017-07-09 23:54:57 PDT
Tim Horton
Comment 2 2017-07-09 23:57:54 PDT
Comment on attachment 314964 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=314964&action=review > Source/WebKit2/UIProcess/ios/WKActionSheetAssistant.mm:374 > + if (![_interactionSheet presentSheet:computePresentationStyleForView(_view.getAutoreleased(), _positionInformation.value(), _elementInfo.get())]) Drop the needless “compute” prefix and I’m sold :)
Wenson Hsieh
Comment 3 2017-07-10 00:00:15 PDT
Comment on attachment 314964 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=314964&action=review Thanks! >> Source/WebKit2/UIProcess/ios/WKActionSheetAssistant.mm:374 >> + if (![_interactionSheet presentSheet:computePresentationStyleForView(_view.getAutoreleased(), _positionInformation.value(), _elementInfo.get())]) > > Drop the needless “compute” prefix and I’m sold :) 👍
Wenson Hsieh
Comment 4 2017-07-10 00:26:13 PDT
Created attachment 314966 [details] Patch for landing
WebKit Commit Bot
Comment 5 2017-07-10 03:04:56 PDT
Comment on attachment 314966 [details] Patch for landing Clearing flags on attachment: 314966 Committed r219287: <http://trac.webkit.org/changeset/219287>
Note You need to log in before you can comment on or make changes to this bug.